phone number select box and country code alignment fix

--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -182,7 +182,7 @@ button:hover {
 
 .input-box select {
   width: 100%;
-  height: 30px;
+  height: 34px;
   background-color: transparent;
   border-top: none;
   border-right: none;
